Follow up patch for bug 62485. script type="text/ecmascript" is not recognized. r+a=brendan